--- a/TNE/pom.xml
+++ b/TNE/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.tnemc</groupId>
     <artifactId>TNE</artifactId>
-    <version>1.1.8.26</version>
+    <version>1.1.9.2</version>
     <packaging>jar</packaging>
     <name>The New Economy</name>
     <properties>
@@ -69,9 +69,9 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-theneweconomy-java</id>
-            <name>theneweconomy-java</name>
-            <url>https://api.bintray.com/maven/theneweconomy/java/TNECore/;publish=1</url>
+            <id>github-TNE</id>
+            <name>GitHub TheNewEconomy Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/TheNewEconomy/TNE-Bukkit</url>
         </repository>
     </distributionManagement>
 
@@ -89,8 +89,8 @@
             <url>http://nexus.hc.to/content/repositories/pub_releases</url>
         </repository>
         <repository>
-            <id>reserve-repo</id>
-            <url>https://dl.bintray.com/theneweconomy/java/</url>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/TheNewEconomy/packages</url>
         </repository>
         <repository>
             <id>placeholderapi</id>
@@ -107,6 +107,11 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.TownyAdvanced</groupId>
+            <artifactId>Towny</artifactId>
+            <version>master</version>
+        </dependency>
         <!-- Part of Java EE, removed from Java SE in JDK11 -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -128,43 +133,26 @@
         <dependency>
             <groupId>com.github</groupId>
             <artifactId>TNELib</artifactId>
-            <version>0.1.3.15</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>net.tnemc</groupId>
-                    <artifactId>TheNewConfigLibrary</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>0.1.3.16</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>Reserve</artifactId>
-            <version>0.1.3.0</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.github</groupId>
-                    <artifactId>TNELib</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>0.1.4.8</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>TheNewConfigLibrary</artifactId>
-            <version>0.1.1.50</version>
+            <version>0.1.1.45</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>TNDBU</artifactId>
-            <version>0.1.5.23</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>net.tnemc</groupId>
-                    <artifactId>TheNewConfigLibrary</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>0.1.5.17</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
@@ -193,13 +181,13 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.14-pre5-SNAPSHOT</version>
+            <version>1.15.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.14-pre5-SNAPSHOT</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.15.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
